--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>concurso-power-up</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Controle Financeiro</title>
+    <meta name="description" content="Controle Financeiro" />
+    <meta name="author" content="Eike Lennie" />
 
-    <meta property="og:title" content="concurso-power-up" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Controle Financeiro" />
+    <meta property="og:description" content="Controle Financeiro" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@eikelad" />
+    <meta name="twitter:image" content="" />
   </head>
 
   <body>
